# oral-render

./: .gitignore  README.md  package.json  prettier.config.js  vite.config.js
app/: layout.js  page.js
app/files/: page.js  styles.css
app/render/: page.js  styles.css
lib/slices/: baseSlice.js
src/: StoreProvider.jsx  globals.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src/components/model/: model-viewer.jsx
src/components/plugins/: FildDragDropPlugin.jsx
src/components/render/: camera-rotation.jsx  model-render.jsx
src/lib/: store.js
src/lib/slices/: baseSlice.js
src/pages/files/: page.jsx  styles.css
src/pages/index/: page.jsx
src/pages/multi-render/: page.jsx
src/pages/multi-render-hack/: page.jsx
src/pages/multi-render/control-panel/: page.jsx
src/pages/render/: page.jsx
src/utils/: fs-utils.js
