[package]
name = "oral-render-react"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-notification = "2.0.0-beta.5"
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-os = "2.0.0-beta.4"
tauri-plugin-http = "2.0.0-beta.7"
tauri-plugin-shell = "2.0.0-beta.5"
tauri-plugin-process = "2.0.0-beta.4"
tauri-plugin-clipboard-manager = "2.1.0-beta.2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.4"
